<resources>
    <string name="app_name">4. More Controls</string>
    <string name="output_text">Text</string>
    <string name="good_programmer_checkbox_text">Check if you\'re good programmer</string>
    <string name="do_it_button_text">Do It!</string>
    <string name="pay_for_good_fmt">%s I\'ll pay 100\'000\'000 won a year</string>
    <string name="pay_for_not_good_fmt">%s Good bye</string>
    <string name="pay_good_emoji">😍</string>
    <string name="pay_not_good_emoji">😔</string>
    <string name="enter_name_edit_text">Enter your name</string>
    <string name="immediate_switch_text">Apply immediately</string>
    <string name="new_activity_button_text">New Activity</string>
</resources>