<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/emojiTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_good_emoji"
        android:textSize="32sp"
        android:layout_marginHorizontal="8dp"
        />
    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_text"
        android:textSize="24sp"
        android:padding="8dp"
        />
    <CheckBox
        android:onClick="onCheckBoxGoodProgrammer"
        android:id="@+id/goodProgrammerCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/good_programmer_checkbox_text"
        />
    <Switch
        android:id="@+id/immediateSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/immediate_switch_text"
        />
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_edit_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_it_button_text"
            android:layout_marginHorizontal="8dp"
            android:onClick="onBtnDoIt"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_activity_button_text"
            android:layout_marginHorizontal="8dp"
            android:onClick="onBtnNewActivity"
            />
    </LinearLayout>

    <kr.ac.tukorea.sgp.s2018182024.morecontrols.GameView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="20dp"
    />
</LinearLayout>